--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,8 +7,18 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master, test-action ]
+ # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  stale:
+  # This workflow contains a single job called "build"
+  test_stale:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: rodvdka/git-sweep-merged-and-stale@v0.2-alpha
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: rodvdka/git-sweep-merged-and-stale@v0.2-alpha
