--- a/action.yaml
+++ b/action.yaml
@@ -7,6 +7,13 @@ This deletes branches that fulfil either of these:
   - Merged into Master or Main (specified by `which_master_main`) OR
   - Branches older than X days (specified by `delete_stale_after_days`)
 
+This by default does not work until you set parameter action = `cleanup`
+
+The following branches are not deleted by default:
+  - main
+  - develop
+  - master
+
 WARNING: When you delete branches with no active PR, you will lose access to the ability to restore the branch. Please back it up using Github Artifacts or
 a copy of the branch prior to running this."
 inputs:
@@ -21,7 +28,7 @@ inputs:
   skip:
     description: 'Comma seperated string list of branches to ignore'
     required: false
-    default: "main"
+    default: "main,develop,master"
   which_master_main:
     description: 'The name of what you consider the main or master branch'
     required: false
