--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,9 +2,9 @@ name: Test release of action
 
 on:
   push:
-    branches: [ master ]
+    branches: '*'
   pull_request:
-    branches: [ master, test-action ]
+    branches: '*'
   workflow_dispatch:
 
 jobs:
@@ -14,4 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: rodvdka/git-sweep-merged-and-stale@v0.12-alpha
+      - uses: rodvdka/git-sweep-merged-and-stale@v0.13-alpha
+      - uses: rodvdka/git-sweep-merged-and-stale@v0.13-alpha
+        with:
+          action: "cleanup"
