--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,10 @@
 name: Test release of action
 
 on:
+  push:
+    branches:
+      - main
+      - master
   pull_request:
     branches: '*'
   workflow_dispatch:
