--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
-name: Automatically update the latest-tag
+name: Automatically update the test-tag
 on:
 
   push:
-    branches: [ master ]
+    branches:
+      - "test*"
 
   workflow_dispatch:
 
@@ -14,12 +15,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run latest-tag
         uses: EndBug/latest-tag@latest
+        with:
+          tag-name: test
 
   test_stale:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: rodvdka/git-sweep-merged-and-stale@latest
-      - uses: rodvdka/git-sweep-merged-and-stale@latest
+      - uses: rodvdka/git-sweep-merged-and-stale@test
+      - uses: rodvdka/git-sweep-merged-and-stale@test
         with:
           action: "cleanup"
