--- a/.github/workflows/pytest-cover-build-upload-pypi.yml
+++ b/.github/workflows/pytest-cover-build-upload-pypi.yml
@@ -4,7 +4,8 @@ on:
     branches: 
       - '*'
   push:
-
+    branches:
+      - 'master'
 
 jobs:
   pytest_coverage_tool:
@@ -40,31 +41,21 @@ jobs:
       run: PATH="$PATH:/home/runner/.local/bin" pytest -vvv --cache-clear --cov=src/gitsweep/ --cov-config=.coveragerc src/gitsweep/tests > pytest-coverage.txt
     - name: Comment coverage
       uses: coroo/pytest-coverage-commentator@v1.0.2
-  build_or_upload_if_tag_to_pypi:
+  build_latest_tag:
+    if: github.ref == 'refs/heads/master'
     needs: [pytest_coverage_tool]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ['3.9']
+    runs-on: ubuntu-latest
     steps:
-    - name: git
-      run: sudo apt-get install git
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Display Python version
-      run: python -c "import sys; print(sys.version)"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --user .
-        pip install twine wheel
-    - uses: casperdcl/deploy-pypi@v2
-      with:
-        build: true
-        pip: true
-        password: ${{ secrets.SECRET_PYPI_RODCODES_API_TOKEN }}
-        upload: ${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}
+      - uses: actions/checkout@v2
+      - name: Run latest-tag
+        uses: EndBug/latest-tag@latest
+  test_stale:
+    if: github.ref == 'refs/heads/master'
+    needs: [pytest_coverage_tool, build_latest_tag]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: rodvdka/git-sweep-merged-and-stale@latest
+      - uses: rodvdka/git-sweep-merged-and-stale@latest
+        with:
+          action: "cleanup"
