--- a/.github/workflows/pytest-cover-build-upload-pypi.yml
+++ b/.github/workflows/pytest-cover-build-upload-pypi.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Comment coverage
       uses: coroo/pytest-coverage-commentator@v1.0.2
   build_latest_tag:
-    if: github.ref == 'refs/heads/master'
+    if: github.event.master_branch
     needs: [pytest_coverage_tool]
     runs-on: ubuntu-latest
     steps:
@@ -50,7 +50,7 @@ jobs:
       - name: Run latest-tag
         uses: EndBug/latest-tag@latest
   test_stale:
-    if: github.ref == 'refs/heads/master'
+    if: github.event.master_branch
     needs: [pytest_coverage_tool, build_latest_tag]
     runs-on: ubuntu-latest
     steps:
