--- a/.github/workflows/build-or-upload.yml
+++ b/.github/workflows/build-or-upload.yml
@@ -20,7 +20,7 @@ jobs:
     - name: git
       run: sudo apt-get install git
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
