--- a/.github/workflows/push_tag_to_pypi.yml
+++ b/.github/workflows/push_tag_to_pypi.yml
@@ -4,7 +4,7 @@ on:
     inputs:
       tag:
         description: 'Tag to Push'
-        default: 'latest'
+        default: '1.0b1'
         required: true
 
 jobs:
