--- a/.github/workflows/pytest-cover-build-upload-pypi.yml
+++ b/.github/workflows/pytest-cover-build-upload-pypi.yml
@@ -1,4 +1,4 @@
-name: Pytest versions and on push = test build, and on tag = upload build
+name: Pytest and tag latest and beta
 on:
   pull_request:
     branches: 
@@ -58,6 +58,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run latest-tag
         uses: EndBug/latest-tag@latest
+  build_latest_tag_beta:
+    if: github.ref == 'refs/heads/master' && github.actor == 'rodvdka'
+    needs: [run_data]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run latest-tag
+        uses: EndBug/latest-tag@1.0b1
   test_stale:
     needs: [build_latest_tag]
     runs-on: ubuntu-latest
