--- a/.github/workflows/push_tag_to_pypi.yml
+++ b/.github/workflows/push_tag_to_pypi.yml
@@ -19,9 +19,11 @@ jobs:
         os: [ubuntu-latest]
         python-version: ['3.9']
     steps:
-    - name: git
+    - name: Git install
       run: sudo apt-get install git
     - uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.inputs.tag }} || '1.0b1'
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -34,8 +36,6 @@ jobs:
         pip install --user .
         pip install twine wheel
     - uses: casperdcl/deploy-pypi@v2
-      env:
-        FORCED_TAG: ${{ github.event.inputs.tag }} || '1.0b1'
       with:
         build: true
         pip: true
