--- a/.github/workflows/pytest-cover-build-upload-pypi.yml
+++ b/.github/workflows/pytest-cover-build-upload-pypi.yml
@@ -65,7 +65,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run latest-tag
-        uses: EndBug/latest-tag@1.0b1
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: 1.0b1
   test_stale:
     needs: [build_latest_tag]
     runs-on: ubuntu-latest
