--- a/.github/workflows/push_tag_to_pypi.yml
+++ b/.github/workflows/push_tag_to_pypi.yml
@@ -23,7 +23,7 @@ jobs:
       run: sudo apt-get install git
     - uses: actions/checkout@v2
       with:
-        ref: ${{ github.event.inputs.tag }} || '1.0b1'
+        ref: refs/tags/${{ github.event.inputs.tag }} || refs/tags/1.0b1
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
