--- a/.github/workflows/push_tag_to_pypi.yml
+++ b/.github/workflows/push_tag_to_pypi.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       tag:
         description: 'Tag to Push'
-        default: '1.0b1'
+        default: 'refs/tags/1.0b1'
         required: true
 
 jobs:
@@ -23,7 +23,7 @@ jobs:
       run: sudo apt-get install git
     - uses: actions/checkout@v2
       with:
-        ref: refs/tags/${{ github.event.inputs.tag }} || refs/tags/1.0b1
+        ref: ${{ github.event.inputs.tag }} || refs/tags/1.0b1
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
