--- a/action.yaml
+++ b/action.yaml
@@ -1,24 +1,9 @@
-name: Delete Merged & Old Stale Branches
+name: Git Sweep Merged and Stale
 author: Rodney Hawkins (rod.codes)
-description: "Delete merged and stale branches from a Github repository.
-Use at your own risk.
-
-This deletes branches that fulfil either of these:
-  - Merged into Master or Main (specified by `which_master_main`) OR
-  - Branches older than X days (specified by `delete_stale_after_days`)
-
-This by default does not work until you set parameter action = `cleanup`
-
-The following branches are not deleted by default:
-  - main
-  - develop
-  - master
-
-WARNING: When you delete branches with no active PR, you will lose access to the ability to restore the branch. Please back it up using Github Artifacts or
-a copy of the branch prior to running this."
+description: Deletes old branches older than X days and merged branches. Based on `git-sweep`.
 inputs:
   delete_stale_after_days:
-    description: 'After how many days should a branch be stale?'
+    description: 'After how many days should a branch be stale `X`?'
     required: true
     default: '365'
   action:
