Need to use Python 3

--- a/action.yaml
+++ b/action.yaml
@@ -21,6 +21,9 @@ inputs:
 runs:
   using: composite
   steps:
+    - id: which version
+      run: python -c "import sys; print(sys.version)"
+      shell: bash
     - id: ensure-python36-and-above
       run: ${{ github.action_path }}/bin/ensure_python
       shell: bash
