--- a/cleanup.yml
+++ b/cleanup.yml
@@ -27,7 +27,7 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d%H%M')"
     - name: Backup git
-      run: git archive -o backup.zip master
+      run: git archive --format zip --output backup.zip master
     - name: Backup Repo to Artifact for 30 days
       uses: actions/upload-artifact@v2
       with:
