--- a/preview.yml
+++ b/preview.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: master
+        fetch-depth: 0
     # This is where the backup happens
     # vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
 
