--- a/cleanup.yml
+++ b/cleanup.yml
@@ -21,9 +21,8 @@ jobs:
     # You have to checkout master to back up the entire repo
     - uses: actions/checkout@v2
       with:
-        ref: master
         fetch-depth: 0
-
+      run: git checkout HEAD^
     # This is where the backup happens
     # vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
 
