--- a/preview.yml
+++ b/preview.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - run: git checkout HEAD^
+    - run: git checkout master
     # This is where the backup happens
     # vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
 
@@ -30,12 +30,12 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d%H%M')"
     - name: Backup git
-      run: tar cvf - * | gzip -9 - > backup.tar.gz
+      run: git bundle create repo.bundle --all
     - name: Backup Repo to Artifact for 30 days
       uses: actions/upload-artifact@v2
       with:
         name: repo-zip-${{ steps.date.outputs.date }}
-        path: backup.tar.gz
+        path: repo.bundle
         retention-days: 30
 
     # This is where the backup happens
